Dodanie logiki dla nowej lokalizacji dat rozpoczęcia i zakończenia

--- a/LanguageSchool/Views/Group/Create.cshtml
+++ b/LanguageSchool/Views/Group/Create.cshtml
@@ -15,7 +15,7 @@
     <div class="container">
         <div class="row col-md-12">
             <div class="thumbnail col-md-2">
-                <input type="submit" value="Utwórz" class="btn btn-block btn-default" />
+                <input type="submit" value="Dalej" class="btn btn-block btn-default" />
             </div>
         </div>
         <div class="row form-horizontal thumbnail col-md-12">
