--- a/LanguageSchool/Views/UserData/Details.cshtml
+++ b/LanguageSchool/Views/UserData/Details.cshtml
@@ -6,18 +6,13 @@
 }
 
 <div class="container">
-    <div class="row align-items-center h-100">
-        <div class="col-xs-4">
-        </div>
-        <div class="col-xs-4">
-            <div>
-                <button class="btn btn-block btn-primary" type="button" onclick="location.href='@Url.Action("Edit", "UserData")'">Edytuj</button>
-            </div>
+    <div class="row col-md-12">
+        <div class="thumbnail col-md-3">
+            <button class="btn btn-block btn-primary" type="button" onclick="location.href='@Url.Action("Edit", "UserData")'">Edytuj</button>
         </div>
     </div>
-
-    <div class="row thumbnail col-xs-12">
-        <div class="col-xs-4">
+    <div class="row thumbnail col-md-12">
+        <div class="col-md-4">
             <label>
                 Login:
             </label>
@@ -25,22 +20,22 @@
             @Html.DisplayFor(model => model.User.Login)
         </div>
 
-        <div class="col-xs-4">
-            <div class="col-xs-6">
+        <div class="col-md-4">
+            <div class="col-md-6">
                 <label>
                     Hasło:
                 </label>
             </div>
 
-            <div class="col-xs-6" id="placeholder" style="display: block">
+            <div class="col-md-6" id="placeholder" style="display: block">
                 ●●●●●●●●
             </div>
-            <div class="col-xs-6" id="password" style="display: none">
+            <div class="col-md-6" id="password" style="display: none">
                 @Html.DisplayFor(model => model.User.Password)
             </div>
         </div>
 
-        <div class="col-xs-4">
+        <div class="col-md-4">
             <label>
                 Pokaż hasło:
             </label>
@@ -50,7 +45,7 @@
 
     <p />
 
-    <div class="row thumbnail col-xs-12">
+    <div class="row thumbnail col-md-12">
         <dl class="dl-horizontal">
             <dt>
                 Data utworzenia wpisu
