Wyświetlanie belki grupy dla pickera godzin, poprawka buttona edycji użytkownika

--- a/LanguageSchool/Views/UserData/Details.cshtml
+++ b/LanguageSchool/Views/UserData/Details.cshtml
@@ -8,7 +8,7 @@
 <div class="container">
     <div class="row col-md-12">
         <div class="thumbnail col-md-3">
-            <button class="btn btn-block btn-primary" type="button" onclick="location.href='@Url.Action("Edit", "UserData")'">Edytuj</button>
+            <button class="btn btn-block" type="button" onclick="location.href='@Url.Action("Edit", "UserData")'">Edytuj</button>
         </div>
     </div>
     <div class="row thumbnail col-md-12">
