Zestaw poprawek dla wyświetlania

--- a/LanguageSchool/Views/ContactRequest/Details.cshtml
+++ b/LanguageSchool/Views/ContactRequest/Details.cshtml
@@ -6,87 +6,77 @@
 }
 
 <div class="container-fluid">
-    <div class="row col-md-12 thumbnail">
-        <div class="col-md-offset-2 col-md-10">
-            <dl class="dl-horizontal">
-                <dt>
-                    Data wysłania prośby
-                </dt>
-
-                <dd>
-                    @Html.DisplayFor(model => model.CreationDate)
-                </dd>
-
-                <dt>
-                    Imię i nazwisko
-                </dt>
-
-                <dd>
-                    @Html.DisplayFor(model => model.Fullname)
-                </dd>
-
-                <dt>
-                    Kurs
-                </dt>
-
-                <dd>
-                    @Html.DisplayFor(model => model.Course.Name)
-                </dd>
-
-                <dt>
-                    Numer telefonu
-                </dt>
-
-                <dd>
-                    @Html.DisplayFor(model => model.PhoneNumber)
-                </dd>
-
-                <dt>
-                    Adres email
-                </dt>
-
-                <dd>
-                    @Html.DisplayFor(model => model.EmailAdress)
-                </dd>
-
-                <dt>
-                    Komentarz
-                </dt>
-
-                <dd>
-                    @Html.DisplayFor(model => model.Comment)
-                </dd>
-
-                <dt>
-                    Test
-                </dt>
-
-                <dd>
-                    @Html.DisplayFor(model => model.TakenTestName)
-                </dd>
-
-                <dt>
-                    Zdobyte punkty
-                </dt>
-
-                <dd>
-                    @Html.DisplayFor(model => model.TotalScore)
-                </dd>
-            </dl>
-
-            <div class="form-group">
-                <button class="btn btn-default" type="button" onclick="location.href='@Url.Action("Edit", "ContactRequest", new { id = @Model.Id })'">Edytuj dane</button>
+    <div class="row col-md-12">
+        <div class="thumbnail col-md-4">
+            <div class="col-md-6">
+                <button class="btn btn-block btn-default" type="button" onclick="location.href='@Url.Action("Edit", "ContactRequest", new { id = @Model.Id })'">Edytuj</button>
+            </div>
+            <div class="col-md-6">
+                <button class="btn btn-block btn-primary" type="button" onclick="location.href='@Url.Action("Create", "UserData")/@Model.Id'">Utwórz użytkownika</button>
             </div>
         </div>
     </div>
-    <div class="row col-md-12">
-        <div class="col-md-1">
+
+    <div class="row col-md-12 thumbnail">
+        <div class="row form-group">
+            <div class="control-label col-md-2">
+                <strong>Imię i nazwisko</strong>
+            </div>
+            <div class="col-md-4">
+                @Html.DisplayFor(model => model.Fullname)
+            </div>
+
+            <div class="control-label col-md-2">
+                <strong>Numer telefonu</strong>
+            </div>
+            <div class="col-md-4">
+                @Html.DisplayFor(model => model.PhoneNumber)
+            </div>
         </div>
-        <div class="col-md-4">
-            <button class="btn btn-block btn-primary" type="button" onclick="location.href='@Url.Action("List", "UserData")'">Lista</button>
+        <div class="row form-group">
+            <div class="control-label col-md-2">
+                <strong>Data wysłania prośby</strong>
+            </div>
+            <div class="col-md-4">
+                @Html.DisplayFor(model => model.CreationDate)
+            </div>
+
+            <div class="control-label col-md-2">
+                <strong>Kurs</strong>
+            </div>
+            <div class="col-md-4">
+                @Html.DisplayFor(model => model.Course.Name)
+            </div>
         </div>
-        <div class="col-md-4">
-            <button class="btn btn-block btn-primary" type="button" onclick="location.href='@Url.Action("Create", "UserData")/@Model.Id'">Utwórz użytkownika</button>
+        <div class="row form-group">
+            <div class="control-label col-md-2">
+                <strong>Test</strong>
+            </div>
+            <div class="col-md-4">
+                @Html.DisplayFor(model => model.TakenTestName)
+            </div>
+
+            <div class="control-label col-md-2">
+                <strong>Zdobyte punkty</strong>
+            </div>
+            <div class="col-md-4">
+                @Html.DisplayFor(model => model.TotalScore)
+            </div>
+        </div>
+        <div class="row form-group">
+            <div class="control-label col-md-2">
+                <strong>Adres email</strong>
+            </div>
+            <div class="col-md-4">
+                @Html.DisplayFor(model => model.EmailAdress)
+            </div>
+
+            <div class="control-label col-md-2">
+                <strong>Komentarz</strong>
+            </div>
+            <div class="col-md-4">
+                @Html.DisplayFor(model => model.Comment)
+            </div>
         </div>
     </div>
 </div>
