Robocze zmiany dla listy - stronicowanie, logoff

--- a/LanguageSchool/Views/UserData/List.cshtml
+++ b/LanguageSchool/Views/UserData/List.cshtml
@@ -1,4 +1,5 @@
 ﻿@using PagedList.Mvc;
+@using LanguageSchool.DAL;
 @model PagedList.IPagedList<LanguageSchool.Models.GetContactInfoListItem>
 
 @using LanguageSchool.Models.ViewModels;
@@ -13,24 +14,24 @@
     {
         DateTime now = DateTime.Now;
 
-        <div class="row thumbnail col-xs-12">
+        <div class="row thumbnail col-md-12">
             <div class="row">
-                <div class="col-xs-2">
+                <div class="col-md-2">
                     @Html.Label("Utworzono od:", new { @style = "float:right" })
                 </div>
-                <div class="col-xs-2">
+                <div class="col-md-2">
                     @Html.TextBox("creationDateFrom", (new DateTime(now.Year, now.Month, 1)).ToString("yyyy/MM/dd"), new { @id = "creationDateFrom", @onchange = "disableButton()", @class = "textarea", @style = "width:80px" })
                 </div>
-                <div class="col-xs-1">
+                <div class="col-md-1">
                     @Html.Label("Użytkownik:", new { @style = "float:right" })
                 </div>
-                <div class="col-xs-3">
+                <div class="col-md-3">
                     @Html.TextBox("fullName", (string)ViewBag.fullName, new { @class = "textarea", @style = "width:300px" })
                 </div>
-                <div class="col-xs-2">
+                <div class="col-md-2">
                     @Html.Label("Typ:", new { @style = "float:right" })
                 </div>
-                <div class="col-xs-2">
+                <div class="col-md-2">
                     <font color="gray">
                         dane @Html.CheckBox("showUserData", (bool)ViewBag.showUserData, new { @id = "showUserData", @onchange = "disableButton()" })
                         prośby @Html.CheckBox("showContactRequests", (bool)ViewBag.showContactRequests, new { @id = "showContactRequests", @onchange = "disableButton()" })
@@ -39,68 +40,69 @@
             </div>
             <p />
             <div class="row">
-                <div class="col-xs-2">
+                <div class="col-md-2">
                     @Html.Label("Utworzono do:", new { @style = "float:right" })
                 </div>
-                <div class="col-xs-2">
+                <div class="col-md-2">
                     @Html.TextBox("creationDateTo", now.ToString("yyyy/MM/dd"), new { @id = "creationDateTo", @onchange = "disableButton()", @class = "textarea", @style = "width:80px" })
                 </div>
-                <div class="col-xs-1">
+                <div class="col-md-1">
                     @Html.Label("Email:", new { @style = "float:right" })
                 </div>
-                <div class="col-xs-3">
+                <div class="col-md-3">
                     @Html.TextBox("emailAdress", (string)ViewBag.emailAdress, new { @class = "textarea", @style = "width:200px" })
                 </div>
-                <div class="col-xs-2">
+                <div class="col-md-2">
                     @Html.Label("Miasto:", new { @style = "float:right" })
                 </div>
-                <div class="col-xs-2">
+                <div class="col-md-2">
                     @Html.TextBox("city", (string)ViewBag.city, new { @class = "textarea", @style = "width:120px" })
                 </div>
             </div>
             <p />
             <div class="row">
-                <div class="col-xs-2">
+                <div class="col-md-2">
                     @Html.Label("Godziny:", new { @style = "float:right" })
                 </div>
-                <div class="col-xs-2">
+                <div class="col-md-2">
                     @Html.TextBox("PreferredHoursFrom", (int)ViewBag.PreferredHoursFrom, new { @id = "preferredHoursFrom", @onchange = "disableButton()", @class = "textarea", @style = "width:30px" })
                     -
                     @Html.TextBox("PreferredHoursTo", (int)ViewBag.PreferredHoursTo, new { @id = "preferredHoursTo", @onchange = "disableButton()", @class = "textarea", @style = "width:30px" })
                 </div>
-                <div class="col-xs-1">
+                <div class="col-md-1">
                     @Html.Label("Ulica:", new { @style = "float:right" })
                 </div>
-                <div class="col-xs-3">
+                <div class="col-md-3">
                     @Html.TextBox("street", (string)ViewBag.street, new { @class = "textarea", @style = "width:300px" })
                 </div>
-                <div class="col-xs-2">
+                <div class="col-md-2">
                     @Html.Label("Telefon:", new { @style = "float:right" })
                 </div>
-                <div class="col-xs-2">
+                <div class="col-md-2">
                     @Html.TextBox("phoneNumber", (string)ViewBag.phoneNumber, new { @class = "textarea", @style = "width:120px" })
                 </div>
             </div>
+            <p />
             <div class="row">
-                    <div class="col-md-2">
-                        @Html.Label("Kurs")
-                    </div>
-                    <div class="col-md-10">
-                        @Html.DropDownList("CourseId", (SelectList)ViewBag.Courses, "Wybierz kurs", new { @class = "form-control" })
-                    </div>
-                    <div class="col-md-2">
-                        @Html.Label("Rola")
-                    </div>
-                    <div class="col-md-10">
-                        @Html.DropDownList("RoleId", (SelectList)ViewBag.Roles, "Wybierz rolę", new { @class = "form-control" })
-                    </div>
+                <div class="col-md-offset-4 col-md-1">
+                    @Html.Label("Kurs:", new { @style = "float:right" })
+                </div>
+                <div class="col-md-3">
+                    @Html.DropDownList("CourseId", (SelectList)ViewBag.Courses, "Wybierz kurs", new { @class = "form-control" })
+                </div>
+                <div class="col-md-offset-1 col-md-1">
+                    @Html.Label("Rola:", new { @style = "float:right" })
+                </div>
+                <div class="col-md-2">
+                    @Html.DropDownList("RoleId", (SelectList)ViewBag.Roles, "Wybierz rolę", new { @class = "form-control" })
+                </div>
             </div>
     </div>
     
     <p />
 
-    <div class="row col-xs-12">
-        <div class="col-xs-10">
+    <div class="row col-md-12">
+        <div class="col-md-10">
             @Html.PagedListPager(Model, page => Url.Action("List",
                 new
                 {
@@ -120,11 +122,14 @@
                     page
                 }
             ))
+            @*<div class="col-md-2">
+                @Html.DropDownList("pageSize", (SelectList)PopulateList.GetPageSizes(), "Liczba wyników", new { @class = "form-control" })
+            </div>*@
         </div>
-        <div class="col-xs-1">
+        <div class="col-md-1">
             <button class="btn btn-default" type="reset">Przywróć</button>
         </div>
-        <div class="col-xs-1">
+        <div class="col-md-1">
             <button class="btn btn-default" id="submit" type="submit">Szukaj</button>
         </div>
     </div>
@@ -132,7 +137,7 @@
 
     <p />
 
-        <div class="row thumbnail col-xs-12">
+        <div class="row thumbnail col-md-12">
             <table class="table table-striped table-bordered">
                 <tr>
                     <th>
