--- a/LanguageSchool/Views/UserData/Details.cshtml
+++ b/LanguageSchool/Views/UserData/Details.cshtml
@@ -8,12 +8,19 @@
 <div class="container">
     <div class="row col-md-12">
         <div class="thumbnail col-md-4">
-            <div class="col-md-6">
+            @if(Model.User.RoleId == (int)Consts.Roles.Student)
+            {
+                <div class="col-md-6">
+                    <button class="btn btn-block btn-default" type="button" onclick="location.href='@Url.Action("Edit", "UserData", new { id = @Model.Id })'">Edytuj</button>
+                </div>
+                <div class="col-md-6">
+                    <button class="btn btn-block btn-default" type="button" onclick="location.href='@Url.Action("AddGroups", "UserData", new { id = @Model.Id })'">Dodaj do grup</button>
+                </div>
+            }
+            else
+            {
                 <button class="btn btn-block btn-default" type="button" onclick="location.href='@Url.Action("Edit", "UserData", new { id = @Model.Id })'">Edytuj</button>
-            </div>
-            <div class="col-md-6">
-                <button class="btn btn-block btn-default" type="button" onclick="location.href='@Url.Action("AddGroups", "User")/@Model.Id'">Dodaj do grup</button>
-            </div>
+            }
         </div>
     </div>
     <div class="row thumbnail col-md-12">
