--- a/LanguageSchool/Views/UserData/AddGroups.cshtml
+++ b/LanguageSchool/Views/UserData/AddGroups.cshtml
@@ -26,29 +26,42 @@
         </div>
 
         <div class="row thumbnail col-md-12">
-            <table class="table table-bordered">
-                <tr>
-                    <th>
-                        Nazwa
-                    </th>
-                    <th>
-                        Zapisz
-                    </th>
-                </tr>
-
-                @for (int i = 0; i < @Model.GroupsAvaible.Count; i++)
-                {
-                    @Html.HiddenFor(model => model.GroupsAvaible[i].GroupId)
+            <div class="btn-group-toggle" data-toggle="buttons">
+                <table class="table table-bordered">
                     <tr>
-                        <td>
-                            @Model.GroupsAvaible[i].Fullname
-                        </td>
-                        <td>
-                            <label>@Html.EditorFor(model => model.GroupsAvaible[i].IsMarked)</label>
-                        </td>
+                        <th>
+                            Nazwa
+                        </th>
+                        <th>
+                            Godziny
+                        </th>
                     </tr>
-                }
-            </table>
+
+                    @for (int i = 0; i < @Model.GroupsAvaible.Count; i++)
+                    {
+                        @Html.HiddenFor(model => model.GroupsAvaible[i].GroupId)
+                        <tr>
+                            <td>
+                                @Model.GroupsAvaible[i].Fullname
+                            </td>
+                            <td>
+                                @foreach(var hour in @Model.GroupsAvaible[i].Hours)
+                                {
+                                    <p>@hour.DateFullName</p>
+                                }
+                            </td>
+                            <td>
+                                <label class="btn btn-default btn-block">
+                                    <label style="display: none">
+                                        @Html.EditorFor(model => model.GroupsAvaible[i].IsMarked)
+                                    </label>
+                                    Zapisz
+                                </label>
+                            </td>
+                        </tr>
+                    }
+                </table>
+            </div>
         </div>
 
         <div class="row col-md-12">
@@ -64,7 +77,7 @@
                         Nazwa
                     </th>
                     <th>
-                        Zablokowana przez
+                        Godziny
                     </th>
                 </tr>
 
