--- a/LanguageSchool/Views/UserData/Details.cshtml
+++ b/LanguageSchool/Views/UserData/Details.cshtml
@@ -14,7 +14,7 @@
                     <button class="btn btn-block btn-default" type="button" onclick="location.href='@Url.Action("Edit", "UserData", new { id = @Model.Id })'">Edytuj</button>
                 </div>
                 <div class="col-md-6">
-                    <button class="btn btn-block btn-default" type="button" onclick="location.href='@Url.Action("AddGroups", "UserData", new { id = @Model.Id })'">Dodaj do grup</button>
+                    <button class="btn btn-block btn-default" type="button" onclick="location.href='@Url.Action("AddGroups", "UserData", new { id = @Model.Id })'">Dodaj do grupy</button>
                 </div>
             }
             else
