--- a/LanguageSchool/Views/UserData/AddGroups.cshtml
+++ b/LanguageSchool/Views/UserData/AddGroups.cshtml
@@ -77,7 +77,17 @@
                         <td>
                             @foreach (var hour in @Model.GroupsNonavaible[i].Hours)
                             {
-                                <p>@hour.DateFullName</p>
+                                string shown = hour.DateFullName;
+                                string style = null;
+
+                                if (hour.IsBlocked)
+                                {
+                                    style = "color:red;";
+                                    shown += " [" + hour.ConflictingDateFullName + "]";
+                                }
+                                <p style="@style">
+                                    @shown
+                                </p>
                             }
                         </td>
                     </tr>
