--- a/LanguageSchool/Views/User/TimeTable.cshtml
+++ b/LanguageSchool/Views/User/TimeTable.cshtml
@@ -1,6 +1,15 @@
-﻿@using LanguageSchool.Models;
+﻿@using System;
+@using System.Collections.Generic;
+@using System.Data;
+@using System.Data.Entity;
+@using System.Linq;
+@using System.Net;
+@using System.Web;
+@using System.Web.Mvc;
+@using LanguageSchool.Models;
+@using LanguageSchool.Models.ViewModels;
 
-@model List<List<Group>>
+@model List<GroupTime>
 
 @{
     ViewBag.Title = "Create";
@@ -43,21 +52,33 @@
                 <td>@currentHour - @nextHour</td>
                 @for (int j = 0; j < 7; j++)
                 {
-                    string shown = null;
-                    Group currentGroup = Model[i][j];
-                    if (currentGroup != null)
+                    GroupTime current = Model.Where(gt => (gt.DayOfWeekId == (j + 1)) && !(gt.EndTime < i + 8) && !(gt.StartTime > i + 8)).FirstOrDefault();
+                    if (current == null)
                     {
-                        shown = currentGroup.Course.Name + " (" + currentGroup.Name + ")";
+                        <td></td>
                     }
-                    <td>
-                        @shown
-                    </td>
+                    else
+                    {
+                        <td>
+                            @current.Group.Course.Name + " (" + current.Group.Name + ")"
+                        </td>
+                    }
                 }
             </tr>
         }
         </table>
     </div>
 </div>
+
+<style type="text/css">
+    td {
+        width: 100px;
+    }
+
+    th {
+        width: 100px;
+    }
+</style>
 
 @section Scripts {
     @Scripts.Render("~/bundles/jqueryval")
